--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:title" content="PolyTrack">
   <meta property="og:description" content="A low-poly racing game with loops, jumps and high speeds, where every millisecond counts.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.kodub.com/apps/polytrack">
+  <meta property="og:url" content="https://wowdabug.github.io/s2/polytrack/">
   <meta property="og:image" content="https://www.kodub.com/apps/polytrack/image">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@KodubDev">
