--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDBG</title>
+  <title>Polytrack</title>
   <script src="../../scripts/main.js"></script><link rel="icon" href="https://wowdabug.github.io/wdbg/images/favicon.png">
   <style>
     html, body {
